Update server/src/test/java/de/tum/aet/devops25/w03/CanteenControllerTest.java
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>